# agent

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: app.rs  config.rs  input.rs  main.rs  ui.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: agent.rs  error.rs  event.rs  guard.rs  handler.rs  lib.rs  message.rs  model.rs  openai.rs  storage.rs  tool.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: edit_file.rs  glob.rs  grep.rs  lib.rs  read_file.rs  shell.rs  write_file.rs
docs/superpowers/plans/: 2026-04-08-agent-implementation.md
docs/superpowers/specs/: 2026-04-08-agent-design.md
