[package]
name = "agent-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-core = { path = "../agent-core" }
agent-tools = { path = "../agent-tools" }
async-openai = "0.27"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
dirs = "6"
