[package]
name = "agent-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
async-openai = { version = "0.27", optional = true }
tokio-stream = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["openai"]
openai = ["dep:async-openai", "dep:tokio-stream"]
