[package]
name = "agent-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
agent-core = { path = "../agent-core" }
async-trait = "0.1"
glob = "0.3"
regex = "1"
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "fs"] }
walkdir = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"

[features]
default = ["shell", "file", "search"]
shell = []
file = []
search = []
web = ["dep:reqwest"]
